Removing deprecated options